...
          Wrap(
            alignment: WrapAlignment.center,
            spacing: AppSpacing.xl,
            runSpacing: AppSpacing.xs,
            children: [
              TextButton(
                key: const ValueKey('event_details.view_events_link'),
                onPressed: () => context.push('/events'),
                child: Text(
                  'View events list',
                  style: AppTextStyles.buttonTertiary.copyWith(
                    color: AppColors.electrolyte,
                  ),
...
